<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#B1B1B1"
	>

	<com.facebook.drawee.view.SimpleDraweeView
		android:id="@+id/icon"
		android:layout_width="100dp"
		android:layout_height="50dp"
		android:layout_marginTop="30dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<TextView
		android:id="@+id/temperature_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/temperature"
		android:layout_marginTop="30dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/icon"
		/>

	<TextView
		android:id="@+id/temperature"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toEndOf="@+id/temperature_label"
		app:layout_constraintTop_toTopOf="@+id/temperature_label"
		app:layout_constraintBottom_toBottomOf="@+id/temperature_label"
		/>

	<TextView
		android:id="@+id/wind_direction_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/wind_direction"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/temperature_label"
		/>

	<TextView
		android:id="@+id/wind_direction"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toEndOf="@+id/wind_direction_label"
		app:layout_constraintTop_toTopOf="@+id/wind_direction_label"
		app:layout_constraintBottom_toBottomOf="@+id/wind_direction_label"
		/>

	<TextView
		android:id="@+id/wind_power_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/wind_power"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/wind_direction"
		/>

	<TextView
		android:id="@+id/wind_power"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toEndOf="@+id/wind_power_label"
		app:layout_constraintTop_toTopOf="@+id/wind_power_label"
		app:layout_constraintBottom_toBottomOf="@+id/wind_power_label"
		/>

	<TextView
		android:id="@+id/time_of_day_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/time_of_day"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/wind_power_label"
		/>

	<TextView
		android:id="@+id/time_of_day"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toEndOf="@+id/time_of_day_label"
		app:layout_constraintTop_toTopOf="@+id/time_of_day_label"
		app:layout_constraintBottom_toBottomOf="@+id/time_of_day_label"
		/>

	<TextView
		android:id="@+id/last_update_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/last_update"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/time_of_day_label"
		/>

	<TextView
		android:id="@+id/last_update"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toEndOf="@+id/last_update_label"
		app:layout_constraintTop_toTopOf="@+id/last_update_label"
		app:layout_constraintBottom_toBottomOf="@+id/last_update_label"
		/>

	<TextView
		android:id="@+id/pressure_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/pressure"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/last_update_label"
		/>

	<TextView
		android:id="@+id/pressure"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toEndOf="@+id/pressure_label"
		app:layout_constraintTop_toTopOf="@+id/pressure_label"
		app:layout_constraintBottom_toBottomOf="@+id/pressure_label"
		/>

	<TextView
		android:id="@+id/humidity_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/humidity"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/pressure_label"
		/>

	<TextView
		android:id="@+id/humidity"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toEndOf="@+id/humidity_label"
		app:layout_constraintTop_toTopOf="@+id/humidity_label"
		app:layout_constraintBottom_toBottomOf="@+id/humidity_label"
		/>

	<TextView
		android:id="@+id/city_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/humidity"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/humidity_label"
		/>

	<TextView
		android:id="@+id/city"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toEndOf="@+id/city_label"
		app:layout_constraintTop_toTopOf="@+id/city_label"
		app:layout_constraintBottom_toBottomOf="@+id/city_label"
		/>

	<TextView
		android:id="@+id/status_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/humidity"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/city_label"
		/>

	<TextView
		android:id="@+id/status"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toEndOf="@+id/status_label"
		app:layout_constraintTop_toTopOf="@+id/status_label"
		app:layout_constraintBottom_toBottomOf="@+id/status_label"
		/>

	<EditText
		android:id="@+id/city_field"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:importantForAutofill="no"
		android:inputType="textPersonName"
		android:text="@string/default_city"
		app:layout_constraintBottom_toTopOf="@+id/submit_btn"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_chainStyle="packed"
		tools:ignore="LabelFor"
		/>

	<Button
		android:id="@+id/submit_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:text="@string/submit_button_text"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="@+id/city_field"
		app:layout_constraintStart_toStartOf="@+id/city_field"
		app:layout_constraintTop_toBottomOf="@+id/city_field"
		/>

	<TextView
		android:id="@+id/state_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="@+id/submit_btn"
		app:layout_constraintStart_toStartOf="@+id/submit_btn"
		app:layout_constraintTop_toBottomOf="@+id/submit_btn"
		app:layout_constraintVertical_bias="0.100000024"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>